--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,11 +13,13 @@ status-website:
   # cname: parsimotion.github.io
   baseUrl: /upptime
   logoUrl: https://imagesproducteca.blob.core.windows.net/producteca/isologo-producteca.svg
-  name: Producteca Status
+  name: Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
-  theme: dark
+  theme: night
   navbar:
+    - title: Producteca
+      href: https://www.producteca.com/
     - title: Status
       href: /
     - title: GitHub
